<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >
        <!--<android.support.v4.view.ViewPager-->
        <!--android:id="@+id/vp_content"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--/>-->
        <FrameLayout
            android:id="@+id/fl_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
        ></FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <TextView
                android:id="@+id/tv_square"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:drawableTop="@drawable/tab_discover_press"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/text_square"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="10sp"
            />
            <TextView
                android:id="@+id/tv_my"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:drawableTop="@drawable/tab_my_nor"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/text_my"
                android:textColor="@color/black"
                android:textSize="10sp"
            />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:src="@drawable/tab_options"/>
    <!--新增加，add的界面-->
    <RelativeLayout
        android:id="@+id/ry_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_add"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:id="@+id/iv_inhere_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg_inhere"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/ly_type_inhere"
            android:layout_marginBottom="150dp"
            android:src="@drawable/ic_inhere"/>

        <LinearLayout
            android:id="@+id/ly_type_inhere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/iv_cancel"
            android:layout_marginBottom="59dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/ly_opinion_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_opinion_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_options_task"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_opinion_task"
                    android:textColor="@color/text_inhere"
                    android:layout_marginTop="@dimen/dp_3"
                    android:textSize="@dimen/sp_18"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ly_opinion_topic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_options_topic"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_opinion_topic"
                    android:textColor="@color/text_inhere"
                    android:layout_marginTop="@dimen/dp_3"
                    android:textSize="@dimen/sp_18"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ly_opinion_loan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_options_loan"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_opinion_loan"
                    android:textColor="@color/text_inhere"
                    android:layout_marginTop="@dimen/dp_3"
                    android:textSize="@dimen/sp_18"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@color/bg_inhere"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_options_cancel"/>

    </RelativeLayout>
</FrameLayout>
