<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/lightGray"
        >
        <LinearLayout
            android:id="@+id/ll_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            >
            <TextView
                android:id="@+id/tv_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_task"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="4dp"
                />
            <ImageView
                android:id="@+id/iv_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/global_arrowup"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            >
            <TextView
                android:id="@+id/tv_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_topic"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="4dp"
                />
            <ImageView
                android:id="@+id/iv_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/global_arrowup"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_lease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="true"
            >
            <TextView
                android:id="@+id/tv_lease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_lease"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingTop="12dp"
                android:paddingBottom="4dp"
                />
            <ImageView
                android:id="@+id/iv_lease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/global_arrowup"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@android:color/darker_gray"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
</LinearLayout>