<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_publish_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_publish"
    tools:context="com.digo.fun_add.activity.PublishTaskActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_49"
                android:background="@android:color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/dp_3"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/str_task_title"
                    android:textColor="@color/text_inhere"
                    android:textSize="@dimen/sp_15"/>
                <EditText
                    android:id="@+id/et_task_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textCursorDrawable="@drawable/et_cursor_color"
                    android:hint="@string/str_title_hint"
                    android:paddingBottom="@dimen/dp_3"
                    android:textColor="@color/et_hint"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>
            <View android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:layout_marginLeft="@dimen/dp_15"
                  android:background="@color/bg_item_press"/>
            <RelativeLayout
                android:id="@+id/ry_start_time"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_49"
                android:background="@drawable/bg_item">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/str_start_time"
                    android:textColor="@color/text_inhere"
                    android:textSize="@dimen/sp_15"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_15"
                    android:background="@color/bg_publish"
                    android:src="@drawable/global_arrow"/>
            </RelativeLayout>
            <View android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:layout_marginLeft="@dimen/dp_15"
                  android:background="@color/bg_item_press"/>
            <RelativeLayout
                android:id="@+id/ry_end_time"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_49"
                android:background="@drawable/bg_item">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/str_end_time"
                    android:textColor="@color/text_inhere"
                    android:textSize="@dimen/sp_15"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_15"
                    android:src="@drawable/global_arrow"/>
            </RelativeLayout>
            <View android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:layout_marginLeft="@dimen/dp_15"
                  android:background="@color/bg_item_press"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_49"
                android:background="@android:color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/dp_3"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/str_task_address"
                    android:textColor="@color/text_inhere"
                    android:textSize="@dimen/sp_15"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:textCursorDrawable="@drawable/et_cursor_color"
                    android:background="@null"
                    android:paddingBottom="@dimen/dp_3"
                    android:textColor="@color/et_hint"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>
            <View android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:layout_marginLeft="@dimen/dp_15"
                  android:background="@color/bg_item_press"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dp_12"
                android:paddingTop="@dimen/dp_25">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_3"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="相关图片："
                    android:textColor="@color/text_inhere"
                    android:textSize="@dimen/sp_15"/>
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@color/bg_item_press"
                            android:gravity="center"
                            android:text="添加\n图片"
                            android:textColor="@color/text_color_666"/>
                        <ImageView
                            android:id="@+id/iv_add_photo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_12"
                            android:src="@drawable/options_add_defaut"/>
                    </LinearLayout>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycleview_publish_task"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>
                </FrameLayout>
            </LinearLayout>
            <View android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:layout_marginLeft="@dimen/dp_15"
                  android:background="@color/bg_item_press"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:text="@string/str_task_describtion"
                    android:textColor="@color/text_inhere"
                    android:textSize="@dimen/sp_15"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textCursorDrawable="@drawable/et_cursor_color"
                    android:background="@null"
                    android:lines="5"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_publish_task"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_49"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/str_publish_task"
        android:textColor="@color/text_publish"
        android:textSize="@dimen/sp_18"/>
</RelativeLayout>
